feat: wire up gatherer data pipeline and fix runtime issues
  Connect all gatherer components (Connection Manager, Message Router,
  Writers) to enable real-time data collection from Kalshi WebSocket API.

  Pipeline wiring:
  - Wire up Connection Manager → Message Router → Writers in main.go
  - Fix startup order: start Router and Writers BEFORE Connection Manager
    to prevent buffer overflow during initial market subscription
  - Add proper shutdown handling with deferred cleanup

  Buffer sizing for 300K+ markets:
  - Increase per-client buffer: 1,000 → 100,000 messages
  - Increase central manager buffer: 10,000 → 1,000,000 messages
  - Router uses GrowableBuffer that auto-resizes at 70% capacity

  JSON parsing fixes:
  - Add FlexInt64 type to handle Kalshi timestamps sent as either
    strings ("1234567890") or numbers (1234567890)
  - Update orderbookDeltaWire, tradeWire, tickerWire to use FlexInt64

  Database fixes:
  - Fix ON CONFLICT column order to match primary key constraints:
    - orderbook_deltas: (exchange_ts, ticker, price, side)
    - orderbook_snapshots: (snapshot_ts, ticker, source)
  - Add unix_now_microseconds() function for TimescaleDB retention
    policies with BIGINT time columns

  Local development:
  - Add configs/local/gatherer.yaml for local testing

--- a/configs/gatherer.example.yaml
+++ b/configs/gatherer.example.yaml
@@ -9,10 +9,15 @@ instance:
 # Kalshi API configuration
 api:
   rest_url: https://demo-api.kalshi.co/trade-api/v2
-  ws_url: wss://demo-api.kalshi.co
+  ws_url: wss://demo-api.kalshi.co/trade-api/ws/v2
   # For production, use:
   # rest_url: https://api.elections.kalshi.com/trade-api/v2
-  # ws_url: wss://api.elections.kalshi.com
+  # ws_url: wss://api.elections.kalshi.com/trade-api/ws/v2
+
+  # Authentication (REQUIRED for WebSocket connections)
+  # Get your API key from the Kalshi dashboard
+  api_key: ${KALSHI_API_KEY}
+  private_key_path: ${KALSHI_PRIVATE_KEY_PATH}  # Path to RSA private key PEM file
 
 # Database connection (TimescaleDB for time-series data)
 # Note: Market metadata lives in-memory (Market Registry), no PostgreSQL needed
